Created basic docker config (without smtp server, only web). Stripped down web template for login page.

--- a/Labs/Phishing/web/index.html
+++ b/Labs/Phishing/web/index.html
@@ -4,26 +4,16 @@
     <link rel="stylesheet" type="text/css" href="assets/stylesheet.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xavier Wall Portfolio</title>
+    <title>Profos Systems</title>
     <link rel="icon" type="image/x-icon" href="images/ProfosSystems2.svg">
 </head>
 <body>
     <header>
         <a class="logo-link" href="index.html"><img class="logo" src="images/ProfosSystems2.svg" alt="Profos Logo"></a>
-        <nav>
-            <ul>
-                <a href="index.html"><li>About</li></a>
-                <a href="resume/index.html"><li>Resume</li></a>
-            </ul>
-        </nav>
     </header>
     <div class="content">
     
-        <h1 class="main_title">Welcome to Xavier Wall's Portfolio</h1>
-
-        <p class="primary_content">Hello! My name is Xavier Wall I am a college student studying cybersecurity, and I am the creator of the <a href="https://github.com/Profos-Systems">Profos-Systems Project</a>. My idea behind this project was to give myself a space to share the things I have worked on and learned in technology. My primary interest is long haul optical networking, primarily OTN. I am also quite involved in the Weber State Cyber Club, I am an owner of their GitHub and contribute to labs and challenges for students to complete, these can be found <a href="https://weber-cyber-club.github.io/Home/">here.</a> I have my resume on this site for anyone looking for a candidate in Network Engineering. Thank you for the visit!</p>
-
-        <p class="primary_content">If you would like to see more of my content please visit my GitHub page <a href="https://github.com/wall-xavier/">here</a> or the Profos-Systems GitHub <a href="https://github.com/Profos-Systems">here</a></p>
+        
 
     </div>
 
